src/response/snapshots/delta_sharing_server__response__delta__test__build_delta_metadata_line.snap
---
source: src/response/delta.rs
expression: line
---
{
  "metaData": {
    "deltaMetadata": {
      "id": "f8d5c169-3d01-4ca3-ad9e-7dc3355aedb2",
      "name": "name",
      "description": "description",
      "format": {
        "provider": "parquet",
        "options": {}
      },
      "schemaString": "{\"type\":\"struct\",\"fields\":[{\"name\":\"eventTime\",\"type\":\"timestamp\",\"nullable\":true,\"metadata\":{}}]}",
      "partitionColumns": [
        "date"
      ],
      "createdTime": 1619824428000,
      "configuration": {
        "opt1": "true"
      }
    },
    "version": 1,
    "size": 2,
    "numFiles": 3
  }
}
