src/response/snapshots/delta_sharing_server__response__delta__test__build_delta_protocol_line.snap
---
source: src/response/delta.rs
expression: line
---
{
  "protocol": {
    "deltaProtocol": {
      "minReaderVersion": 1,
      "minWriterVersion": 2,
      "readerFeatures": null,
      "writerFeatures": null
    }
  }
}
